# CliPlus

./: .gitignore  README.md  dependencias.txt  funcionamento.txt  main.py  pyproject.toml
app/database/: supabase_client.py
app/helpers/: auth.py
app/repository/: consultas_repository.py  pacientes_repository.py
app/routes/: comprovante.py  consultas.py  me.py  pacientes.py
app/schemas/: consulta_schema.py  paciente_schema.py
app/services/: comprovante_service.py  consultas_service.py  email_service.py  pacientes_service.py
app/templates/: comprovante.html
settings/: config.py
