[project]
name = "cliplus"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apiflask>=3.1.1",
    "flask>=3.1.3",
    "jinja2>=3.1.6",
    "marshmallow>=4.3.0",
    "python-dotenv>=1.2.2",
    "reportlab>=5.0.0",
    "supabase>=2.31.0",
]
